# rag_on_tap

./: .env.sample  .gitignore  .pre-commit-config.yaml  Agents.md  README.md  docker-compose.prod.yml  docker-compose.yml  hype_questions.json
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/api/: router.py
backend/services/: chat_service.py  chunking_service.py  config_service.py  data_service.py  file_dump_service.py  rag_tool.py  reranker_service.py  storage_service.py  vector_store_service.py
backend/tests/: test_chat_service.py  test_chunking_service.py  test_data_service.py  test_file_dump_service.py  test_hype_enrichment.py  test_rag_tool.py  test_reranker_service.py  test_vector_store_service.py
backend/utilities/: chat_cli.py  drop_table.py  enrichment.py  fetch_recipes.py  fetch_recipes_beer_smith.py  fetch_recipes_brewers_friend.py  hype_enrichment.py  populate_db.py  query_db.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  Header.tsx  Sidebar.tsx  WelcomeModal.tsx
