[project]
name = "beer-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.115.0",
    "huggingface-hub>=0.28.0",
    "langchain>=1.2.7",
    "langchain-community>=0.3.0",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "llama-cpp-python>=0.3.0",
    "pandas>=3.0.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=3.3.1",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pyflakes>=3.2.0",
    "pytest>=9.0.2",
]

[project.scripts]
chat-cli = "utilities.chat_cli:main"
fetch-recipes = "utilities.fetch_recipes:main"
hype-enrichment = "utilities.hype_enrichment:main"
populate-db = "utilities.populate_db:main"
query-db = "utilities.query_db:main"

[tool.setuptools]
packages = ["services", "utilities"]


[tool.isort]
profile = "black"
